[package]
name = "ra1"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
dirs = "5.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
async-trait = "0.1.89"
